added aws s3 service for uploading files and completed all Class Controller needed functionalities
